@@ -1,3 +1,6 @@
+B]Version 3.2.9[/B]
+- Added some more channels
+
 B]Version 3.2.8[/B]
 - Added cricHD
 
